--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
                 <body>
                         <div class="footer-basic mt-3 mb-3 ms-0">
                             <footer>
-                                <div class="social"><a href="https://www.instagram.com/vhaackdesign/"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="https://www.facebook.com/vhaackdesign"><i class="icon ion-social-facebook"></i></a></div>
+                                <div class="social"><a target="_blank" href="https://www.instagram.com/vhaackdesign/"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a   target="_blank" href="https://www.facebook.com/vhaackdesign"><i class="icon ion-social-facebook"></i></a></div>
                                 <ul class="list-inline">
                                     <li class="list-inline-item"><a href="/">Home</a></li>
                                     <li class="list-inline-item"><a href="/produto">Catálogo</a></li>
