correção de portugues

--- a/templates/produto.html
+++ b/templates/produto.html
@@ -208,7 +208,7 @@
 
                 <div class="col-lg-4 mb-5">
                     <div id="carouselExampleIndicators5" class="carousel slide" data-bs-ride="carousel">
-                             <h5 class="text-center titulo"> Torneado II </h5>
+                             <h5 class="text-center titulo"> Torneados II </h5>
                         <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleIndicators5" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselExampleIndicators5" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -242,7 +242,7 @@
                    <div class="card">
                        <img src="static/luminariaslim.jpg" class="card-img-top"/>
                        <div class="card-body">
-                           <h5 class="card-title text-center">Luminárias Slim</h5>
+                           <h5 class="card-title text-center">Luminária Slim</h5>
                        </div>
                    </div>
             </div>
